--- a/appview/pages/templates/repo/blob.html
+++ b/appview/pages/templates/repo/blob.html
@@ -29,7 +29,7 @@
                         >
                         /
                     {{ else }}
-                        <span class="text-bold text-gray-600 dark:text-gray-300"
+                        <span class="text-bold text-black dark:text-white"
                             >{{ index . 0 }}</span
                         >
                     {{ end }}
