--- a/appview/pages/templates/repo/tree.html
+++ b/appview/pages/templates/repo/tree.html
@@ -17,11 +17,11 @@
     {{ $containerstyle := "py-1" }}
     {{ $linkstyle := "no-underline hover:underline" }}
 
-    <div class="pb-2 mb-3 text-base border-b border-gray-200 dark:border-gray-500">
+    <div class="pb-2 mb-3 text-base border-b border-gray-200 dark:border-gray-700">
       <div class="flex flex-col md:flex-row md:justify-between gap-2">
-        <div id="breadcrumbs" class="overflow-x-auto whitespace-nowrap">
+        <div id="breadcrumbs" class="overflow-x-auto whitespace-nowrap text-gray-400 dark:text-gray-500">
           {{ range .BreadCrumbs }}
-          <a href="{{ index . 1}}" class="text-bold text-gray-500 dark:text-gray-400 {{ $linkstyle }}">{{ index . 0 }}</a> /
+            <a href="{{ index . 1}}" class="text-bold text-gray-500 dark:text-gray-400 {{ $linkstyle }}">{{ index . 0 }}</a> /
           {{ end }}
         </div>
         <div id="dir-info" class="text-gray-500 dark:text-gray-400 text-xs md:text-sm flex flex-wrap items-center gap-1 md:gap-0">
